--- a/src/styles.css
+++ b/src/styles.css
@@ -72,11 +72,6 @@
   overflow-y: auto;
 }
 
-.chat-addon-container-item {
-  display: flex;
-  flex-wrap: wrap;
-  overflow-y: auto;
-}
 .chat-addon-button {
   height: 20px;
   width: 20px;
@@ -87,26 +82,33 @@
   cursor: pointer;
 }
 
-.chat-emoticons-item {
-  width: 10%;
-  padding: 2px;
-  text-align: center;
+.chat-stickers-container {
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: auto;
 }
 
 .chat-stickers-item {
   padding: 2px;
-  width: 25%;
-  height: 50px;
   justify-content: center;
   align-items: center;
   display: flex;
+  font-size: 40px;
+  flex-basis: 25%;
   border-right: 1px solid #666666;
   border-bottom: 1px solid #666666;
 }
 
+.chat-quick-messages-container {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
 .chat-quick-messages-item {
-  padding: 2px;
-  width: 100%;
+  padding: 10px 4px;
+  display: flex;
+  flex-grow: 1;
   border-bottom: 1px solid #666666;
 }
 
