--- a/src/styles.css
+++ b/src/styles.css
@@ -57,9 +57,10 @@
 }
 
 .chat-window-header {
-  width: auto;
-  display: block;
-  height: 60px;
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .chat-window > div:last-child >.chat-window-header:last-child{
@@ -85,6 +86,21 @@
 
 .chat-window > .chat-window-body:first-child{
   border-radius: .25rem .25rem 0 0;
+}
+
+.chat-text-field{
+  width:100%;
+  height: 30px;
+  background-color: #222222;
+  border-width: 0;
+  border-radius: .25rem;
+  display: block;
+  color: white;
+  font-size: 12px;
+  padding: 4px 8px;
+}
+.chat-text-field:focus{
+  outline: none;
 }
 
 .chat-messages-container {
