Renamed chat window header to row and some fixes to chat text input

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,19 +56,11 @@
   align-items: flex-end;
 }
 
-.chat-window-header {
+.chat-window-row {
   padding: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.chat-window > div:last-child >.chat-window-header:last-child{
-  border-radius: 0 0 .25rem .25rem;
-}
-
-.chat-window > div:first-child > .chat-window-header{
-  border-radius: .25rem .25rem 0 0;
 }
 
 .chat-window-body {
